# hh_parser-frontend

./: .env.default  README.md  pyproject.toml
frontend/: __main__.py  app.py  config.py  schemas.py
frontend/client/: vacancies.py
frontend/templates/: base.html  menu.html  vacancies.html
frontend/view/: vacancies.py
