[tool.poetry]
name = "hh_parser-frontend"
version = "0.1.0"
description = ""
authors = ["Valexandrin <alex-vadim@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
pydantic = "^1.9.1"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
